# PyMario64

./: README.md  pyproject.toml  run
assets/goomba/: goomba.mtl
assets/mario/: mario64.mtl
assets/peach/: peach.mtl
assets/skybox/: skybox.mtl
assets/star/: star.mtl
assets/toad/: toad.mtl
assets/world/: world.mtl
assets/yoshi/: yoshi.mtl
src/: Pipfile  body.py  camera.py  input.py  input_handler.py  main.py  model_3d.py  models.py  object_3d.py  pymario64.py  scene.py  setup.py  shader_handler.py  shaders.py  util.py
src/shaders/: fragment.frag  fragment.glsl  vertex.glsl  vertex.vert
